# flyingpen_interface

./: .gitignore  CMakeLists.txt  README.md  package.xml
bag/: data_decryptor.m  data_decryptor_old.m  data_decryptor_specific.m
bag/logging/: 01041824.csv  01041829.csv
bag/rosbag2_20251203_105602_contact/: metadata.yaml
bag/rosbag2_20251203_111502_ground_effect/: metadata.yaml
launch/: launcher.launch.py
models/: model.urdf  model_board.urdf
src/: command_publisher.cpp  data_logging.cpp  data_logging_specific.cpp  data_player.cpp  rviz_visual.cpp
