<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flying_pen</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="seosu99@seoultech.ac.kr">seosuk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>crazyflie_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_cpp</depend> <!-- 패키지 share 경로 얻으려고 -->  
  <depend>visualization_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Eigen은 ROS2 패키지가 아니라 시스템 종속 -->
  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
